<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@android:color/black"
    tools:context="petrisor.eduard.matei.mobiledevicesprogrammingproject.LoginActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="11dp"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <TextView
                    android:layout_width="79dp"
                    android:layout_height="29dp"
                    android:text="@string/tvUsername"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold|italic" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etUsername"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="28dp"
                    android:text="@string/tvPassword"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold|italic" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="262dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/etPassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LL2"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <Button
                    android:id="@+id/btnLogon"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnLogon"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnRegister"
                    android:textColor="@android:color/black"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnAbout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/aboutBtn"
                    android:textColor="@android:color/black" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
