<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@android:color/black"
    tools:context="petrisor.eduard.matei.mobiledevicesprogrammingproject.RegisterActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRegUsername"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold|italic" />

                <EditText
                    android:id="@+id/etRegUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/etRegUsername"
                    android:textColor="@android:color/black" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRegPassword"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold|italic" />

                <EditText
                    android:id="@+id/etRegPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/etRegPassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRegConfirmPassword"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold|italic" />

                <EditText
                    android:id="@+id/etRegConfirmPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/etRegConfirmPassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnCreateAccount"
                    android:textColor="@android:color/black" />
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
