<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@android:color/black"
    tools:context="petrisor.eduard.matei.mobiledevicesprogrammingproject.ReviewsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="@string/tv_username"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold|italic" />

                <TextView
                    android:id="@+id/idUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/black" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="13dp"
                android:orientation="horizontal"
                android:textColor="@android:color/black">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:textColor="@android:color/black">

                    <TextView
                        android:id="@+id/tv_rev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="28sp"
                        android:textStyle="normal|bold" />

                    <EditText
                        android:id="@+id/et_rev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/reviewHint"
                        android:lines="4"
                        android:textColor="@android:color/black" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LL1"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textColor="@android:color/black">


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textRating"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textStyle="normal|bold|italic" />

                <RatingBar
                    android:id="@+id/rs_rev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="1"
                    android:textColor="@android:color/black" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/LL2"
                android:layout_marginTop="11dp"
                android:orientation="horizontal"
                android:textColor="@android:color/black">

                <Button
                    android:id="@+id/rev_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ReviewBtn"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/revCancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelreview"
                    android:textColor="@android:color/black" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/LL3"
                android:layout_below="@+id/LL3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/revViewBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewReviews"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/chartBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chartTxt"
                    android:textColor="@android:color/black" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
