<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@android:color/black">

    <LinearLayout
        android:id="@+id/LL4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LL1"
        android:orientation="horizontal"
        android:textColor="@android:color/black">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/placeName"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/revPlaceName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LL4"
        android:orientation="horizontal"
        android:textColor="@android:color/black">

        <TextView
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:text="@string/revRating"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/revDetailRating"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/LL2"
        android:orientation="horizontal"
        android:textColor="@android:color/black">

        <TextView
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/revText"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/revDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:textColor="@android:color/black"
        android:weightSum="1">

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/revUser"
            android:textColor="@android:color/black"
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/revDetailUserName"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"></TextView>
    </LinearLayout>

</RelativeLayout>